--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.min.js"></script>
 
 		<!-- ABLEPLAYER -->
-		<script type="text/javascript" src="vendors/ableplayer/ableplayer.js"></script>
+		<script type="text/javascript" src="../vendors/ableplayer/ableplayer.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous" />
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="./src/index.jsx"></script>
+		<script type="text/javascript" src="index.jsx"></script>
 	</body>
 </html>
